[package]
name = "snake-egg"
version = "0.1.0"
edition = "2021"

[lib]
name = "snake_egg"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.11"
once_cell = "1"
egg = { git = "https://github.com/egraphs-good/egg", rev = "v0.7.1" }
# pyo3 = { version = "0.14.5", features = ["extension-module"] }

[dependencies.pyo3]
features = ["extension-module"]
version = "0.15.0"
# git = "https://github.com/PyO3/pyo3"
# rev = "64df791741e61c331a03dbed42085b0c1adffea1"
