[package]
name = "snake-egg"
version = "0.1.0"
edition = "2021"

[lib]
name = "snake_egg"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.11"
once_cell = "1"
pyo3 = { version = "0.15", features = ["extension-module"] }
egg = { git = "https://github.com/egraphs-good/egg", rev = "v0.7.1" }

[build-dependencies]
pyo3-build-config = "0.15"
