[package]
name = "snake-egg"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "egg._internal"

[lib]
name = "snake_egg"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
hashbrown = "0.11"
once_cell = "1"
pyo3 = { version = "0.16", features = ["extension-module"] }
egg = { path = "../egg" }
