[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
dependencies = ["typing-extensions"]

[project]
name = "snake-egg"
requires-python = '>=3.7'

[tool.isort]
profile = "black"

[tool.maturin]
sdist-include = ["Cargo.lock"]

[project.optional-dependencies]
dev = [
  "mypy"
]
[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
check_untyped_defs = true
strict_equality = true
warn_unused_configs = true
enable_recursive_aliases = true
